fixed createSecurityRequirement (for http and apiKey schemes the list must be empty.)